# precountify

./: Pipfile  README.md  setup.cfg  setup.py
.github/workflows/: pythonpackage.yml
precountify/: audio_file.py  cli.py  click.py  librosa_tempo_estimator.py  madmom_tempo_estimator.py  margin.py  mono.py  music.py  stereo.py
tests/: test_click.py  test_margin.py  test_music.py  test_precount.py  test_precountify.py  test_util.py
tests/audio/: test_mono.py  test_stereo.py
