[metadata]
name = precountify
version = attr: precountify._version.__version__
author = Akiomi Kamakura
author-email = akiomik@gmail.com
description = A tool for pre-countifying
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
url = https://github.com/akiomik/precountify
license = Apache License 2.0
license_file = LICENSE
platform = any
classifiers =
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
zip_safe = false
packages = find:
python_requires = >=3.4

[options.packages.find]
exclude =
    *.tests

[options.entry_points]
console_scripts =
  precountify = precountify.cli:main

[flake8]
doctests = true
